--- a/ui/html/footer.html
+++ b/ui/html/footer.html
@@ -1,5 +1,5 @@
 {{define "footer"}}
 
-<footer>Created with <strong>Golang</strong></footer>
+<footer>Created with <strong><a href="https://go.dev">Golang</a></strong></footer>
 
 {{end}}
